# actix-askama-starter

./: Cargo.toml  README.md
src/: main.rs
src/middlewares/: internal_server_error.rs  mod.rs
static/: home.html  login.html  table-basic.html  table-data-table.html
static/css/: main.css
static/errors/: 404.html  500.html
static/secured/template/: base.html  menu.html
static/secured/views/: a.html  dashboard.html  delete-me.html  empty-page.html  home.html
static/secured/views/users/: new-user.html  search.html
static/templates/: footer.html  index.html
